# yanclaw

./: .gitignore  CLAUDE.md  README.md  biome.json  bunfig.toml  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: ANALYSIS_BUN_DESKTOP_APP.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  DATABASE.md  DESIGN.md  DESKTOP.md  DEVELOPMENT-WORKFLOW.md  DEVELOPMENT.md  FEATURES.md  MODEL_SYSTEM.md  SERVER.md  WEB.md  WRITING-GUIDE.md  agent-response-mechanism.md  i18n.md  macos-signing.md  product-analysis-agent-reliability.md  security-guide.md  steering-mechanism.md
docs/devlogs/: 2026-03-10-fix-tauri-blank-page.md  2026-03-11-background-running.md  2026-03-11-model-system-overhaul.md  2026-03-12-agent-capabilities-p0.md  2026-03-12-agent-capabilities-p1.md  2026-03-12-agent-capabilities-p2.md  2026-03-12-agent-capabilities-review.md  2026-03-12-agent-capabilities-summary.md  2026-03-12-onboarding-tray-fixes.md  2026-03-13-notarization-fix.md  2026-03-13-skill-management.md  2026-03-14-claude-code-integration-debug.md  2026-03-14-multi-agent-coding-hub.md  2026-03-14-openclaw-improvements.md  2026-03-14-task-loop.md  2026-03-15-reliability-and-ux.md  2026-03-16-test-infra-and-pino-fix.md  phase1-mvp.md  phase2-core.md  phase3-extension.md  phase4-build-fixes.md
docs/modules/: channels.md  cron.md  memory.md  plugins.md  routing.md  tools.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+45 files in other folders)
